--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -37,6 +37,6 @@
   #profile {
     margin: 5em;
     position: sticky;
-    top: 20em;
+    top: 10em;
   }
 }
