--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -35,6 +35,12 @@ main {
   align-items: center;
 }
 
+.side-by-side {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 @media only screen and (max-width: 420px) {
   main {
     max-width: 100%;
